2004-11-12	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.1.3.
	* exo/exo-config.h.in, exo/exo-config.c, exo/exo.h, docs/exo-docs.sgml,
	  docs/tmpl/exo-config.sgml, docs/exo-sections.txt: Added
	  `Version Information' variables and macros similar to what
	  we use in Xfce and Gtk+.
	* m4/debug.m4: --enable-final is now on by default for plattforms
	  that support it.
	* exo/exo-toolbars-model.c(exo_toolbars_model_real_add_item): Always
	  check if the action is valid.

2004-11-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-string.c(exo_str_is_equal): Avoid call to strcmp here.
	* configure.ac, exo/exo-toolbars-model.c: Elide the dependency on
	  libxml-2.0. Replaced with a GLib based XML parser.
	* configure.ac, m4/gtk-doc.m4, docs/: Added initial API reference
	  documentation for libexo.

2004-11-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-toolbars-private.c: Fix a crash on X setups where Gtk+
	  doesn't use the best visual by default.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* AUTHORS: Added note about libegg.

2004-11-09	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Depend on libxml-2.0. Set libtool verinfo properly.
	* exo/exo-string.h, exo/exo-string.c: Added a function
	  exo_str_elide_underscores that is used to remove underscores
	  from label texts.
	* exo/exo-marshal.list, exo/exo-marshal.c, exo/exo-marshal.h: Added
	  additional marshallers required for the toolbars stuff.
	* exo/exo-toolbars-private.h, exo/exo-toolbars-private.c,
	  exo/exo-toolbars-model.h, exo/exo-toolbars-model.c,
	  exo/exo-toolbars-view.h, exo/exo-toolbars-view.c,
	  exo/exo-toolbars-editor-dialog.h, exo/exo-toolbars-editor-dialog.c,
	  exo/exo-toolbars-editor.h, exo/exo-toolbars-editor.c: Added a
	  customizable toolbar with backend and editing frontend. This is
	  partly based on the editable toolbar found in libegg, but not
	  compatible in any way.
	* exo/exo.h: Include new headers.

2004-10-12	Benedikt Meurer <benny@xfce.org>
