@@ -1,3 +1,8 @@
+2004-11-15	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-toolbars-view.c: Emit "popup-menu" if the user clicks the
+	  toolbars while not in Editing mode.
+
 2004-11-12	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac, NEWS: Version 0.1.3.
